Trying to fix CSS on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -187,7 +187,7 @@ header {
           justify-content: center;
           align-items: center;
           min-width: 5rem;
-          height: 5rem;
+          min-height: 5rem;
           background-color: white;
           border-radius: 50%;
           img {
@@ -206,7 +206,6 @@ header {
   }
   .rightMain {
     display: flex;
-    height: 40rem;
     width: 20rem;
     .card3 {
       width: 100%;
